# NestingProj

./: CMakeLists.txt
computation/: CMakeLists.txt  main.cxx
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
square/: CMakeLists.txt  square.cxx  square.h
squareRoot/: CMakeLists.txt  squareRoot.cxx  squareRoot.h
